# zero2prod

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
.sqlx/: query-0bc6a1d3d17d0721e8e8a6d3462bad510ac6bc4f89403b3fdd278297303f8ac3.json  query-2163b03998a1ad09e2d1535999c76e7ec0eeb3aaeff67029de070dc6db3876b9.json  query-22c36c324d4c0dbb707d998e4dd31ee31c70b5fe38e1fdd64fb18c1490ba0ca5.json  query-2fa1f5a492010f6f406b456aef23075edc08941b8a4e4856838a8789025bd269.json  query-555549515a6cd65c2cfa40b563ee60202cdd0631d314a551723c5b108699b141.json  query-5808752700eb77506d76bc073b1eea2907ec1ce565c7f9a314c17e339684e968.json  query-d71e6763657c6bbb7b3c84a63885f1e4c161d79f6b82e921a546602f07f3edab.json
configuration/: base.yaml  production.yaml
migrations/: 20240320161326_create_subscriptions_table.sql  20240329145243_make_status_not_null_in_subscriptions.sql  20240329150023_create_subscription_tokens_table.sql  20240418094704_seed_user.sql  20240420075806_create_idempotency_table.sql  20240420125842_relax_null_checks_on_idempotency.sql  20240421183150_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_pgAdmin_container.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login_mod/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
